# TPFinalAlgo2

./: .gitignore  CarEval.csv  README.md  play_tennis.csv  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
src/: _typing.py  base_tree.py  decision_algorithms.py
src/docs/: conf.py  index.rst
src/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  treeModels.doctree  treeModels.models.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  treeModels.html  treeModels.models.html
src/docs/_build/html/_sources/: modules.rst.txt  treeModels.models.rst.txt  treeModels.rst.txt
src/models/: model.py  tree_models.py
src/plot/: plot_tree.py
src/testing/: test.ipynb  test.py
src/treeModels/: __init__.py  _typing.py  base_tree.py  decision_algorithms.py
src/treeModels/models/: model.py  tree_models.py
streamlit/: demo.py
tests/: conftest.py  test.ipynb  test_BaseTree.py  test_DecisionTree.py  test_randomForest.py  test_tree_model.py
