[metadata]
name = treeModels
version = 1.0
description =
    librería que permite construir modelos predictivos a través de una versión simplificada del 
    ensamble RandomForest.
author = Arrudi Victoria, Darnes Santiago, Gomez Tomás, Jara Gonzalo, Montti Florencia
license = MIT
license_file = LICENSE
classfiers = Programming Languaje :: Python :: 3

[options]
install_requires = 
    joblib>=1.4.2
    numpy>=1.26.4
    pandas>=2.2.2
    python-dateutil>=2.9.0.post0
    pytz>=2024.1
    scikit-learn>=1.4.2
    scipy>=1.13.0
    six>=1.16.0
    threadpoolctl>=3.5.0
    tzdata>=2024.1

python_requires = >=3.6
package_dir = =src
packages = find:
zip_safe = no

[options.extras_require]
testing = 
    pytest>=8.0
